--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -5,14 +5,17 @@
     android:background="@android:color/holo_orange_light">
 
     <ImageView
-        android:id="@+id/image_view"
+        android:id="@+id/recipeImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/noimage"
         android:maxHeight="130dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
+        android:minHeight="130dp"
+        android:minWidth="130dp"
         android:maxWidth="130dp"
         android:adjustViewBounds="true"
+
         />
 
     <LinearLayout
