--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -103,6 +103,25 @@
             android:layout_height="wrap_content"
             android:background="@android:drawable/editbox_background"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/label_width"
+            android:maxWidth="@dimen/label_width"
+            android:layout_marginStart="6dp"
+            android:layout_marginLeft="6dp"
+            android:text="@string/label_categories"/>
+        <com.sayantan.advancedspinner.MultiSpinner
+            android:id="@+id/category_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
@@ -116,7 +135,7 @@
             android:maxWidth="@dimen/label_width"
             android:layout_marginStart="6dp"
             android:layout_marginLeft="6dp"
-            android:text="@string/label_website"/>
+            android:text="@string/label_image"/>
         <ImageView
             android:id="@+id/recipe_image"
             android:hint="@string/label_website"
