--- a/app/src/main/res/layout/fragment_single_button.xml
+++ b/app/src/main/res/layout/fragment_single_button.xml
@@ -6,7 +6,7 @@
     tools:context=".SingleButton">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addoredit_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button" />
