--- a/app/src/main/res/layout/recipe_recyclerview_item.xml
+++ b/app/src/main/res/layout/recipe_recyclerview_item.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             />
         <TextView
-            android:id="@+id/tvLastEaten"
+            android:id="@+id/textview_meal_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
